[package]
name = "hecto"
version = "0.1.0"
authors = ["Philipp Flenker <hello@philippflenker.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1"
unicode-segmentation = "1"
huelib = "0.9.0"
rand = "0.7.3"
lazy_static = "1.4.0"
crossbeam = "0.8.0"