[package]
name = "Wayferrous"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1"
unicode-segmentation = "1"
huelib = "0.9.0"
rand = "0.7.3"
lazy_static = "1.4.0"
crossbeam = "0.8.0"
steel = { path = "./steel" }
steel_derive = { path = "./steel_derive" }
webbrowser = "0.5.5"
Inflector = "0.11.4"
mac-notification-sys = "0.3.0"
"cocoa" = "0.19.1"
"core-graphics" = "0.17.3"
objc = "0.2.3"
